# yumana_api_v2

./: .env.test  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  railway.toml
.sqlx/: query-0a4b2ce502437a2d344755231e8e7061768b0220f468647277082a4464981e69.json  query-0c92226bd36c194225bd068998b7521ee06a6b465a833850e0a3ef2b830b8e01.json  query-11ef7a61196f6c365af4a998a4b60bcabc3141b747f414a19d482681c675d97b.json  query-1220d15a56dbf823eaa452fbafa17442ab0568bc81a31fa38e16e3df3278e5f9.json  query-1714f02f5fbe37743255f1a88f1fad97808ff0c113aa85165636ad02dbf314d2.json  query-24cd9b18029ef31cf712c1d9861de9497a98e743a26e0ddd36e470961d0b556a.json  query-24ea33795a75c8cf5a55ee719369e1860de7e7e46cddfd4dcb02a4452c9856bf.json  query-31c2d641098efd826cefb8b866b845a11639c67e212de7aee6bb1475f9bd88ec.json  query-34a89aa9784c8ea69cef1fcf6063cd352b706e3a3aa5cc6a2fe2be196f67e45c.json  query-34fe8e9ecb68f9d6ae0281a6cfb5f082ace2337905feb96b7588305476bafa09.json  query-3fe6c8606bab95a160222d2fb17603ca6a50a3588de2b7ca98bbbce3609f3949.json  query-45c8739ee778f89f8c26ae2058d0b3a5ec055e8d16cd1626f287cc052fa72414.json  query-49fe4c2ac55b088522ea0e2579bb4e197e465dcc20c893aa591de079f747d42a.json  query-4f1f850e5e18a186ba0375ff2a2e72bb60a689ef0dbaf40576392345eda42e2e.json  query-58327aa90726e98d2f31a5178c611b22b3177ea71f812c9f53e4164f22cd1f8a.json  query-58826164fdee2dd67ec0c6db4c0c49eaf6ca27390bc492f8de06e1a4bb6a2d03.json  query-604c0bb96614fde4f7ea709c9c80c0fa98e931be4a08baf1f7c45e345e6d0155.json  query-60c8fbe20d9031ef52a8edc37db2a14ad8b10697b81bc0933c59fe21610ec13d.json  query-700237477c1e15a9975c8ba7b8b03a2709178866471e78df1c7a97cd4c31d754.json  query-7c93e929ed7654ae6d36140f2f810716a1ecb23c5973009fda75eab6d8ea6311.json  query-8053dc02aa294d5ebc1fbf34b74f3d7323774d46badbc5ee6e57e12f4a68ba73.json  query-8e2da626236e6d6780f703f941d9b2e8e5e06a37b31cfd43a2d4713202b9979f.json  query-94e20347fef6e4434f2c240205b52926de644b6a5859a20be85e8e23eb66dac6.json  query-9b8e3d69e2ae375797ae9b4576d2850c68414e3d7d0d3aff547c536c1f998654.json  query-9c40a372de47b98b8a1493ae2954124a14c404d2734f5dcb001ee9c41c1348b8.json  query-9e0c994c31cad3dd5b876a34a2c401850cf7d7e2cf02218cc076863b366758d0.json  query-bb7c7bb356037452f9c3d38474f001c1a4c5170cc5bb2d90d7cf262c41a43df9.json  query-d267cbff8091880aea1040f04ce20a626941a21e936b193a73a8b0eb04e3f313.json  query-d718520b0f79dd1b0999cbb65bd334dca8d7209fa914355a38287af587ae8d4c.json  query-d772054ddffa98b1ba37b12ae9659871f38f1ede3b72f9ee424f69cb23a39073.json  query-d96f1ef403f92b47d41a47f1face4a0b748ca66ab2ea19dbfebef279f8b17bd3.json  (+4 more)
migrations/: 20260224023436_initial_schema.sql  (+2 more)
scripts/: pre-push.sh  (+1 more)
(+47 files in other folders)
