[package]
name = "yumana_api_v2"
version = "2.0.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "form",
  "rustls",
] }

# Async runtime
tokio = { version = "1.49.0", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "time",
  "signal",
] }

# Database
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "uuid",
  "time",
] }

# JWT
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }

# Password hashing
argon2 = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
time = { version = "0.3", features = ["serde"] }

# Env & Config
dotenvy = "0.15"

# Validation
regex = "1.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0.10"

#Template Engine for mail template
askama = "0.12.1"

[dev-dependencies]
axum-test = "18.7.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
